# simple-exception

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/simple_exception/: __init__.py
src/simple_exception/core/: __init__.py
src/simple_exception/core/_internal_exception/: SimpleExceptionInternalError.py  __init__.py
src/simple_exception/core/data/: SimpleExceptionData.py  __init__.py
src/simple_exception/exception/: SimpleException.py  __init__.py
src/simple_exception/exception/_mixins/: __init__.py
src/simple_exception/modes/: LOG.py  ONELINE.py  PRETTY.py  SIMPLE.py  __init__.py
src/simple_exception/modes/base_class/: ModeBase.py  __init__.py
src/simple_exception/settings/: SimpleExceptionSettings.py  __init__.py
src/simple_exception/settings/_meta/: SimpleExceptionSettingsMeta.py  __init__.py
src/simple_exception/utils/: __init__.py
src/simple_exception/utils/caller_info/: __init__.py  extract_caller_info.py
src/simple_exception/utils/exception_helper/: __init__.py  bool_or_exception.py
src/simple_exception/utils/sentinel/: UNSET.py  __init__.py
tests/: test_integration.py
tests/core/: test_simple_exception_data.py  test_simple_exception_internal_error.py
tests/exception/: test_simple_exception.py
tests/modes/: test_log.py  test_oneline.py  test_pretty.py  test_simple.py
tests/modes/base_class/: test_mode_base.py
tests/settings/: test_simple_exception_settings.py
tests/utils/caller_info/: test_extract_caller_info.py
tests/utils/exception_helper/: test_bool_or_exception.py
tests/utils/sentinel/: test_unset.py
(+47 files in other folders)
