[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "simple-exception"
version = "0.1.0"
description = "A structured Python exception with diagnostic output and actionable remediation hints."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

[[project.authors]]
name = "Dalibor Sova (Sudip2708)"
email = "daliborsova@seznam.cz"

[project.urls]
Homepage = "https://github.com/simple-libs/simple-exception"
Repository = "https://github.com/simple-libs/simple-exception"
Issues = "https://github.com/simple-libs/simple-exception/issues"
Changelog = "https://github.com/simple-libs/simple-exception/blob/main/CHANGELOG.md"

[project.keywords]
keywords = [
    "exception",
    "error",
    "debugging",
    "diagnostics",
    "developer-tools",
]

[project.classifiers]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Debuggers",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"

[tool.setuptools.packages.find]
where = ["src"]